feat(logout): implement logout confirmation dialog and enhance top menu styling
- Added a logout confirmation dialog to improve user experience before logging out.
- Updated top menu to include a greeting for authenticated users.
- Introduced new CSS styles for the top menu and logout dialog.
- Removed legacy comments and unnecessary code from various views for better readability.
- Updated i18n properties to include new keys for logout confirmation messages.